<resources>
    <string name="app_name">安全卫士</string>
    <string name="app_version">版本号</string>
    <string name="ok">确认</string>
    <string name="cancle">取消</string>
    <string name="download_progress">下载进度</string>
    <string name="function_list">功能列表</string>
    <string name="top_setting">设置中心</string>
    <string name="marquee_ad">新版功能: 1.【红包助手】驾到，红包实时提醒，抢红包快人一秒！  2.【程序锁】新升级，加锁私密应用，自动抓拍偷窥者！</string>
    <string name="testString">测试文字,用来显示布局大小</string>
    <string name="set_autoupdate_open">自动更新已开启</string>
    <string name="set_autoupdate_close">自动更新已关闭</string>
    <string name="set_tv_dec_1">自动更新设置</string>
    <string name="set_tv_dec_2">自动更新已关闭</string>
    <string name="set_tv_dec_3">自动更新已关闭</string>
    <string name="safe_tv_pwd">设置密码</string>
    <string name="safe_tv_enter_pwd">请输入密码</string>
    <string name="safe_tv_confirm_pwd">请再次输入密码</string>
    <string name="top_safe">手机防盗</string>
    <string name="top_safe_guide1">1.欢迎使用手机防盗</string>
    <string name="top_safe_guide2">2.手机防盗</string>
    <string name="top_safe_guide3">3.手机防盗</string>
    <string name="top_safe_guide4">4.恭喜您设置完成</string>
    <string name="top_lost_find">手机防盗</string>
    <string name="sample_device_admin_description">提供远程设备一键锁屏,清除数据功能</string>
    <string name="sample_device_admin">SafeDefender超级设备管理器</string>
    <string name="add_admin_extra_app_text">超级设别管理器设置向导</string>


</resources>
