<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/safe_tv_pwd"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_safe_set_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/safe_tv_enter_pwd"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_safe_set_repwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/safe_tv_confirm_pwd"
        android:inputType="textPassword"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_safe_set_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_safe_set_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="@string/cancle" />
    </LinearLayout>
</LinearLayout>